--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,8 +29,8 @@
   --default-color-rgb: 33, 37, 41;
   --primary-color: #1cab55;
   --primary-color-rgb: 28, 171, 85;
-  --secondary-color: #f1581e;
-  --secondary-color-rgb: 241, 88, 30;
+  --secondary-color: #efe509;
+  --secondary-color-rgb: 239, 229, 9;
   --contrast-color: #ffffff;
   --contrast-color-rgb: 255, 255, 255;
   --text-primary-color: #111827;
@@ -236,14 +236,17 @@ section {
 #topbar .logo img {
   /* max-height: 90px; */
 }
+
 #topbar .RAB-Logo {
   display: flex;
   align-items: center;
   gap: 20px;
 }
+
 #topbar .RAB-Logo img {
   max-height: 100px;
 }
+
 #topbar .RAB-title h4 {
   color: var(--contrast-color);
   font-family: var(--Bangla-font);
@@ -252,19 +255,21 @@ section {
   line-height: 33px;
   letter-spacing: 0.20000000298023224px;
 }
+
 #topbar .RAB-title p {
   margin-bottom: 0px;
   color: var(--contrast-color);
   font-size: 17px;
   font-weight: 400;
 }
+
 #topbar .logo2 img {
   max-height: 120px;
 }
 
 #topbar .logo3 img {
   max-height: 100px;
-  padding-top: 10px;
+  /* padding-top: 10px; */
 }
 
 #topbar .contact-info i {
@@ -357,10 +362,6 @@ section {
 #header .logo img {
   max-height: 40px;
 }
-
-/* .scrolled-offset {
-  margin-top: 70px;
-} */
 
 .language-btn {
   background-color: #e0e1e2;
@@ -574,7 +575,7 @@ section {
 * Mobile Navigation 
 */
 .mobile-nav-toggle {
-  color: #fff;
+  color: var(--primary-color);
   font-size: 28px;
   cursor: pointer;
   display: none;
@@ -683,7 +684,7 @@ section {
 #hero {
   padding: 0px;
   width: 100%;
-  height: 100vh;
+  height: 85vh;
   background: url('../img/hero-bg.jpg') top center;
   background-size: cover;
   position: relative;
@@ -691,7 +692,7 @@ section {
 
 #bg-video {
   min-width: 100%;
-  min-height: 100vh;
+  min-height: 85vh;
   max-width: 100%;
   max-height: 100vh;
   object-fit: cover;
@@ -726,7 +727,7 @@ section {
 }
 
 .hero-main-title h2 {
-  font-size: 14px;
+  font-size: 17px;
   font-weight: 400;
   padding: 0;
   line-height: 1px;
@@ -738,8 +739,7 @@ section {
   align-items: center;
   gap: 10px;
   color: white;
-  font-family: 'Poppins', sans-serif;
-  margin-bottom: 20px;
+  font-family: var(--Bangla-font);
 }
 
 .hero-main-title img {
@@ -749,40 +749,69 @@ section {
 
 .hero-main-title p {
   margin: 0;
-  font-size: 40px;
+  font-size: 45px;
   font-weight: 600;
   margin-bottom: 12px;
-  font-family: 'Poppins', sans-serif;
+  font-family: var(--Bangla-font);
   color: white;
   text-transform: uppercase;
+  line-height: 54px;
+  padding-top: 12px;
 }
-
-.hero-main-title .title-shape {
-  margin: 0 auto;
-  width: 50px;
+/*--------------------------------------------------------------
+# least notices
+--------------------------------------------------------------*/
+.leastNotice {
+  padding: 0px 0px;
+}
+.leastNotice .notice-top {
+  display: inline-block;
   position: relative;
-  background-color: #e41e2f;
-  height: 4px;
-}
+  background-color: var(--secondary-color);
+  height: 42px;
+  padding: 0 20px;
 
-.hero-main-title .title-shape ::before {
-  position: absolute;
-  content: '';
-  width: 4px;
-  height: 4px;
-  background-color: #e41e2f;
-  left: -8px;
-  top: 0;
+  line-height: 42px;
+  width: 100%;
+  text-align: center;
+  text-transform: uppercase;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-
-.hero-main-title .title-shape ::after {
-  position: absolute;
-  content: '';
-  width: 4px;
-  background-color: #e41e2f;
-  height: 4px;
-  right: -8px;
-  top: 0;
+.leastNotice .notice-top h4 {
+  color: var(--color-inverse);
+  font-weight: 600;
+  font-size: 20px;
+  margin-bottom: 0;
+}
+.leastNotice .notice-top-content {
+  display: inline-block;
+  position: relative;
+  background-color: #e3e3e3;
+  height: 42px;
+  /* padding: 0 20px; */
+  padding-right: 20px;
+  line-height: 42px;
+  width: 100%;
+  text-transform: uppercase;
+  display: flex;
+  align-items: center;
+  /* color: #fff; */
+  color: #002147;
+}
+.leastNotice .notice-top-content a {
+  /* color: #fff; */
+  color: var(--text-primary-color);
+  font-weight: 600;
+  font-size: 15px;
+  margin-bottom: 0;
+  padding-right: 15px;
+  font-family: var(--font-secondary);
+}
+.leastNotice .notice-top-content a i {
+  color: var(--color-primary);
+  font-weight: 600;
 }
 
 /*--------------------------------------------------------------
@@ -796,6 +825,7 @@ section {
 .section-title {
   padding-bottom: 50px;
   text-align: center;
+  font-family: var(--Bangla-font);
 }
 
 .section-title h2 {
@@ -811,8 +841,8 @@ section {
   align-items: center;
   gap: 10px;
   color: #e41e2f;
-  font-family: 'Poppins', sans-serif;
   margin-bottom: 15px;
+  font-family: var(--Bangla-font);
 }
 
 .section-title p {
@@ -820,8 +850,8 @@ section {
   font-size: 36px;
   font-weight: 600;
   margin-bottom: 12px;
-  font-family: 'Poppins', sans-serif;
-  color: #131b43;
+  color: var(--text-primary-color);
+  font-family: var(--Bangla-font);
 }
 
 .title-shape {
@@ -1177,7 +1207,7 @@ section {
   ul
   li
   a {
-  color: #888;
+  color: var(--text-secondary-color);
 }
 
 .goverment-service
@@ -1186,7 +1216,8 @@ section {
   ul
   li
   a:hover {
-  color: #e41e2f;
+  color: var(--primary-color);
+  text-decoration: underline;
 }
 
 .goverment-service
@@ -1199,7 +1230,7 @@ section {
   left: 0;
   top: 2px;
   font-size: 20px;
-  color: #e41e2f;
+  color: var(--primary-color);
   line-height: 1;
 }
 
@@ -1728,10 +1759,6 @@ section {
   background-color: #e41e2f;
 }
 
-#mission .Mission-vis-conent {
-  margin-top: 15px;
-}
-
 #mission .Mission-vis-conent .mission-content h4 {
   position: relative;
   font-size: 26px;
@@ -1768,6 +1795,28 @@ section {
   padding-bottom: 22px;
   font-size: 19px;
   text-align: justify;
+}
+
+#mission .police-mission-card-content ul {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+
+#mission .police-mission-card-content ul li {
+  font-size: 17px;
+  margin-bottom: 6px;
+  font-weight: 500;
+  padding-left: 25px;
+  color: var(--text-secondary-color);
+  position: relative;
+}
+
+#mission .police-mission-card-content ul li i {
+  position: absolute;
+  left: 0;
+  top: 4px;
+  color: var(--primary-color);
 }
 
 /*--------------------------------------------------------------
